<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/go_back_button"
            android:layout_marginStart="25dp"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/Textview_frame"
            android:layout_marginStart="26dp"
            android:layout_marginTop="125dp"
            android:text="@string/Register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_register_id"
            style="@style/EditText_frame"
            android:layout_marginTop="15dp"
            android:hint="@string/text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

        <EditText
            android:id="@+id/et_register_phoneNumber"
            style="@style/EditText_frame"
            android:layout_marginTop="15dp"
            android:hint="@string/text_phoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_id" />

        <TextView
            android:id="@+id/tv_error_message"
            style="@style/main_error_message"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="erorr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_phoneNumber" />


        <Button
            style="@style/main_next_button_After"
            android:layout_marginBottom="45dp"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>