<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            style="@style/go_back_button"
            android:layout_marginStart="25dp"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/Textview_frame"
            android:layout_marginStart="26dp"
            android:layout_marginTop="125dp"
            android:text="@string/Register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_sign_up_message"
            style="@style/TextView_register_phoneNumber"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_send_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />


        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/pinEditText"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="36dp"
            android:cursorVisible="false"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:maxLength="4"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_message"
            app:pinAnimationType="popIn"
            app:pinBackgroundDrawable="@drawable/pin_edit"
            app:pinBackgroundIsSquare="true"
            app:pinTextBottomPadding="16dp" />

        <Button
            style="@style/main_next_button_Before"
            android:text="@string/btn_next"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>